--- a/index.html
+++ b/index.html
@@ -1176,10 +1176,7 @@
               </h2>
             </div>
             <p>
-              There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration
-              in some form, by injected humour, or randomised words which don't look even slightly believable. If you
-              are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in
-              the middle of text. All
+             "To inspire joy and creativity in every child through innovative and high-quality toys that foster imagination, learning, and fun."
             </p>
             <a href="https://g.co/kgs/ZNLp8wh">
               Read More
