--- a/index.html
+++ b/index.html
@@ -127,11 +127,11 @@
               </a>
               <form class="form-inline">
                 <button class="btn  my-2 my-sm-0 nav_search-btn" type="submit">
-                  <a class="btn-search" href="file:///C:/Users/OM/Desktop/100%20feane/menu.html">
+                  <a class="btn-search" href="https://www.amazon.in/stores/page/9678F479-371D-4441-AC4F-F7E2BB9705F7">
                   <i class="fa fa-search" aria-hidden="true"></i>
                 </button>
               </form>
-              <a href="file:///C:/Users/OM/Desktop/100%20feane/menu.html" class="order_online">
+              <a href="https://www.amazon.in/stores/page/9678F479-371D-4441-AC4F-F7E2BB9705F7" class="order_online">
                 Order Online
               </a>
             </div>
